--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
     "mongodb": "^6.13.0"
   }
