--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projetodecurso",
   "version": "1.0.0",
   "description": "Repositório do nosso projeto de curso (Business PRO)",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ngrok/ngrok": "^1.4.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongodb": "^6.13.0"
