--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/nodejs": "^5.0.2",
     "@ngrok/ngrok": "^1.4.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
