--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/nodejs": "^5.0.2",
     "@ngrok/ngrok": "^1.4.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.13.0"
   }
