--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "ios:build": "cd mobile && eas build -p ios --profile preview"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.6",
     "next": "15.4.6",
+    "nprogress": "^0.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "electron": "^37.2.6",
