--- a/mobile/app.json
+++ b/mobile/app.json
@@ -21,7 +21,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.renatoaugusto.businesspro"
+      "package": "com.renatoaugusto.hermes"
     },
     "web": {
       "favicon": "./assets/favicon.png"
