--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "businesspro",
+  "name": "hermes",
   "version": "0.1.0",
   "private": true,
   "main": "electron.js",
@@ -19,6 +19,7 @@
     "@tippyjs/react": "^4.2.6",
     "mongodb": "^6.18.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "nprogress": "^0.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
